// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Scan Components - Snapshots > ScanContent - Snapshots > matches snapshot for default ScanContent 1`] = `
<div
  class="hidden md:flex"
  data-testid="container"
>
  <div
    data-testid="page-header"
  >
    <h1
      data-size="large"
      data-testid="page-title"
    >
      Scan 
      <span
        class="text-brand"
      >
        QR Code.
      </span>
    </h1>
    <div
      data-testid="page-subtitle"
    >
      Open Pubky Ring, tap 'add pubky', and scan this QR.
    </div>
  </div>
  <div
    class="flex bg-card text-card-foreground shadow-sm w-full flex-row items-center justify-center gap-12 overflow-hidden rounded-md p-6 lg:p-12"
    data-slot="card"
    data-testid="scan-qr-card"
  >
    <div
      class="hidden w-48 shrink-0 lg:block"
      data-slot="balanced-qr-illustration"
    >
      <img
        alt="Pubky Ring phone scanning a QR code"
        data-testid="next-image"
        height="192"
        src="/images/scan.webp"
        width="192"
      />
    </div>
    <div
      class="flex w-48 shrink-0 items-center justify-center"
      data-slot="balanced-qr-content"
    >
      <div
        class="relative flex size-48 items-center justify-center rounded-md bg-foreground p-2"
      >
        <span
          class="contents"
          data-testid="qr-auth-url"
        >
          <img
            alt="Pubky Ring"
            data-testid="next-image"
            height="176"
            src="/images/pubky-ring-qr-example.webp"
            width="176"
          />
          <span
            class="absolute top-1/2 left-1/2 flex size-12 -translate-x-1/2 -translate-y-1/2 items-center justify-center rounded-full bg-[#05050A]"
          >
            <svg
              aria-label="Pubky Ring"
              class="size-6 text-white [&_path]:fill-current"
              fill="none"
              height="24"
              role="img"
              viewBox="0 0 22 33"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.6133 0L8.04785 3.36154L4.74401 1.28202L3.83457 4.78379L0 3.97891L3.4879 9.67247C5.38937 8.00389 7.88184 6.99219 10.61 6.99137V6.99142H10.6167V6.99137C13.3448 6.9922 15.8373 8.00391 17.7387 9.67248L21.2266 3.97891L17.3921 4.78379L16.4826 1.28202L13.1788 3.36154L10.6167 0.00440823V0.00436164L10.616 0.00351212L10.6133 0ZM10.6133 9.66582C6.12357 9.66582 2.48365 13.3029 2.48365 17.7898C2.48365 19.7315 3.16595 21.5122 4.29976 22.9073L1.18964 32.4116H20.0371L16.9269 22.9073C18.0607 21.5122 18.743 19.7315 18.743 17.7898C18.743 13.3029 15.1031 9.66582 10.6133 9.66582ZM14.9142 17.7899C14.9142 15.4165 12.9888 13.4923 10.6134 13.4923H10.6133C8.23793 13.4923 6.31251 15.4165 6.31251 17.7899C6.31251 19.4347 7.23722 20.8641 8.59649 21.5866L8.73608 21.6608L6.47016 28.5853H14.7565L12.4906 21.6608L12.6302 21.5866C13.9895 20.8641 14.9142 19.4347 14.9142 17.7899Z"
                fill="#C8FF00"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="hidden w-48 shrink-0 lg:block"
      data-slot="balanced-qr-spacer"
    />
  </div>
</div>
`;

exports[`Scan Components - Snapshots > ScanFooter - Snapshots > matches snapshot for default ScanFooter 1`] = `
<div
  data-testid="footer-links"
>
  Use 
  <a
    data-testid="link"
    href="https://pubkyring.app/"
    target="_blank"
  >
    Pubky Ring
  </a>
   or any other 
  <a
    data-testid="link"
    href="https://pubky.org"
    target="_blank"
  >
    Pubky Core
  </a>
  –powered keychain.
</div>
`;

exports[`Scan Components - Snapshots > ScanHeader - Snapshots > matches snapshot for desktop ScanHeader 1`] = `
<div
  data-testid="page-header"
>
  <h1
    data-size="large"
    data-testid="page-title"
  >
    Scan 
    <span
      class="text-brand"
    >
      QR Code.
    </span>
  </h1>
  <div
    data-testid="page-subtitle"
  >
    Open Pubky Ring, tap 'add pubky', and scan this QR.
  </div>
</div>
`;

exports[`Scan Components - Snapshots > ScanHeader - Snapshots > matches snapshot for mobile ScanHeader 1`] = `
<div
  data-testid="page-header"
>
  <h1
    data-size="large"
    data-testid="page-title"
  >
    Tap to 
    <span
      class="text-brand"
    >
      Authorize.
    </span>
  </h1>
  <div
    data-testid="page-subtitle"
  >
    Tap the button to open Pubky Ring, and authorize with your pubky.
  </div>
</div>
`;

exports[`Scan Components - Snapshots > ScanNavigation - Snapshots > matches snapshot for default ScanNavigation 1`] = `
<div
  data-testid="buttons-navigation"
>
  <button
    data-testid="back-button"
  >
    Back
  </button>
</div>
`;
